Modification du style de la page user-entrepot

--- a/FRONT/src/app/user-dashboard-main/user-dashboard-main.html
+++ b/FRONT/src/app/user-dashboard-main/user-dashboard-main.html
@@ -66,7 +66,9 @@
 
           <article class="kpi-card">
             <div class="kpi-card-header">
-              <span class="material-symbols-outlined kpi-card-icon kpi-icon--info">hourglass_top</span>
+              <span class="material-symbols-outlined kpi-card-icon kpi-icon--info"
+                >hourglass_top</span
+              >
               <span>En attente</span>
             </div>
             <p class="kpi-card-value">{{ enAttente }}</p>
@@ -74,7 +76,9 @@
 
           <article class="kpi-card">
             <div class="kpi-card-header">
-              <span class="material-symbols-outlined kpi-card-icon kpi-icon--warning">move_down</span>
+              <span class="material-symbols-outlined kpi-card-icon kpi-icon--warning"
+                >move_down</span
+              >
               <span>Validés en attente</span>
             </div>
             <p class="kpi-card-value">{{ enDechargement }}</p>
@@ -82,7 +86,9 @@
 
           <article class="kpi-card">
             <div class="kpi-card-header">
-              <span class="material-symbols-outlined kpi-card-icon kpi-icon--success">task_alt</span>
+              <span class="material-symbols-outlined kpi-card-icon kpi-icon--success"
+                >task_alt</span
+              >
               <span>Acceptés</span>
             </div>
             <p class="kpi-card-value">{{ decharges }}</p>
