--- a/FRONT/src/app/dashboard/dashboard.html
+++ b/FRONT/src/app/dashboard/dashboard.html
@@ -39,13 +39,13 @@
       </div>
     </nav>
 
-    <div class="sidebar-footer">
+      <div class="sidebar-footer">
       <a href="#" class="sidebar-link secondary">
         <span class="material-symbols-outlined">help</span>
         <span class="link-label">Centre d'aide</span>
       </a>
       <div class="footer-divider"></div>
-      <a href="#" class="sidebar-link logout">
+      <a href="#" class="sidebar-link logout" (click)="$event.preventDefault(); logout()">
         <span class="material-symbols-outlined">logout</span>
         <span class="link-label">Déconnexion</span>
       </a>
