Dernière modification du front

--- a/FRONT/src/app/login/login.html
+++ b/FRONT/src/app/login/login.html
@@ -35,6 +35,7 @@
                 autocomplete="username"
                 [(ngModel)]="username"
                 name="username"
+                required
               />
             </div>
           </div>
@@ -52,6 +53,7 @@
                 autocomplete="current-password"
                 [(ngModel)]="password"
                 name="password"
+                required
               />
 
               <button
