--- a/FRONT/src/app/register/register.html
+++ b/FRONT/src/app/register/register.html
@@ -12,7 +12,7 @@
             </p>
           </header>
 
-          <form class="auth-form" novalidate>
+            <form class="auth-form">
             <div class="field-row">
               <div class="field">
                 <label class="field-label" for="lastName">Nom</label>
@@ -21,6 +21,7 @@
                   type="text"
                   class="field-input"
                   placeholder="Entrez votre nom"
+                  required
                 />
               </div>
 
@@ -31,6 +32,7 @@
                   type="text"
                   class="field-input"
                   placeholder="Entrez votre prénom"
+                  required
                 />
               </div>
             </div>
@@ -42,6 +44,7 @@
                 type="email"
                 class="field-input"
                 placeholder="votre.email@exemple.com"
+                required
               />
             </div>
 
@@ -54,6 +57,7 @@
                     type="password"
                     class="field-input password-input"
                     placeholder="••••••••"
+                    required
                   />
                   <button
                     type="button"
@@ -75,6 +79,7 @@
                     type="password"
                     class="field-input password-input"
                     placeholder="••••••••"
+                    required
                   />
                   <button
                     type="button"
@@ -93,7 +98,7 @@
             <div class="field">
               <label class="field-label" for="role">Quel est votre rôle ?</label>
               <div class="select-wrapper">
-                <select id="role" class="field-select">
+                <select id="role" class="field-select" required>
                   <option>Agent de terrain</option>
                   <option>Responsable d'entrepôt</option>
                   <option>Direction</option>
