Création des pages empotage chez les utilisateurs

--- a/FRONT/src/app/dashboard/dashboard.html
+++ b/FRONT/src/app/dashboard/dashboard.html
@@ -32,13 +32,16 @@
           <span class="material-symbols-outlined">history_edu</span>
           <span class="link-label">Historique</span>
         </a>
+        <a [routerLink]="'/dashboard/adminEmpotage'" routerLinkActive="active" class="sidebar-link">
+          <span class="material-symbols-outlined">inventory_2</span>
+          <span class="link-label">Empotage</span>
+        </a>
         <a [routerLink]="'/dashboard/statistique'" routerLinkActive="active" class="sidebar-link">
           <span class="material-symbols-outlined">analytics</span>
           <span class="link-label">Statistiques</span>
         </a>
       </div>
     </nav>
-
       <div class="sidebar-footer">
       <a href="#" class="sidebar-link secondary">
         <span class="material-symbols-outlined">help</span>
