--- a/FRONT/src/app/user-dashboard/user-dashboard.html
+++ b/FRONT/src/app/user-dashboard/user-dashboard.html
@@ -34,6 +34,10 @@
           <span class="material-symbols-outlined">warehouse</span>
           <p>Entrepôt</p>
         </a>
+        <a [routerLink]="'/userdashboard/userEmpotage'" routerLinkActive="active" class="nav-link">
+          <span class="material-symbols-outlined">inventory_2</span>
+          <span class="link-label">Empotage</span>
+        </a>
         <!-- 
         <a
           [routerLink]="'/userdashboard/userhistorique'"
