--- a/FRONT/src/app/user-entrepot/user-entrepot.html
+++ b/FRONT/src/app/user-entrepot/user-entrepot.html
@@ -10,7 +10,7 @@
           </div>
         </header>
         <!-- STATS ADAPTÉES -->
-        <section class="stats-grid">
+        <!-- <section class="stats-grid">
           <article class="stat-card">
             <p class="stat-label">Camions enregistrés aujourd'hui</p>
             <p class="stat-value">{{ totalEnregistres }}</p>
@@ -35,7 +35,7 @@
             <p class="stat-label">Refoulés</p>
             <p class="stat-value">{{ totalRefoules }}</p>
           </article>
-        </section>
+        </section> -->
         <!-- TOOLBAR -->
         <!-- TOOLBAR -->
         <section class="toolbar" aria-label="Filtres de recherche">
